--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "webpack-dev-server --env --inline --hot --content-base demo --history-api-fallback",
     "build": "webpack --env",
     "build-plugin": "webpack --env.plugin",
-    "build-plugin-copy": "webpack --env.plugin && plugin-copy.bat",
+    "build-plugin-copy": "webpack --env.plugin & plugin-copy.bat",
     "deploy": "gh-pages -d demo"
   },
   "dependencies": {
