--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.23.1",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "reactify": "^1.1.1",
     "redux": "^3.6.0",
