--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "less-loader": "^2.2.3",
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
+    "node-sass": "^4.8.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.0",
     "react": "^15.4.1",
@@ -73,10 +74,12 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "watchify": "^3.7.0",
-    "webpack": "^2.2.1",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^2.3.0",
     "webpack-merge": "^4.1.2"
   }
