--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-table": "^6.8.0",
     "reactify": "^1.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
