--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.7",
