--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-spin": "^0.6.2",
+    "react-spinners": "^0.3.1",
     "react-table": "^6.8.0",
     "reactify": "^1.1.1",
     "redux": "^3.6.0",
@@ -77,6 +79,7 @@
     "reselect": "^3.0.1",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^6.0.7",
+    "spin.js": "^3.1.0",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.7",
     "watchify": "^3.7.0",
