--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "sass-loader": "^6.0.7",
     "spin.js": "^3.1.0",
     "style-loader": "^0.13.2",
+    "svg-sprite": "^1.4.0",
     "url-loader": "^0.5.7",
     "watchify": "^3.7.0",
     "webpack": "^3.11.0",
