--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "webpack --env",
     "build-plugin": "webpack --env.plugin",
     "build-plugin-copy": "webpack --env.plugin & plugin-copy.bat",
-    "build-plugin-copy-l": "webpack --env.plugin & cp dist ../Geomixer-client/plugins/forestproject",
+    "build-plugin-copy-l": "webpack --env.plugin && ./plugin-copy-l.sh",
     "deploy": "gh-pages -d demo"
   },
   "dependencies": {
