--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "node-sass": "^4.8.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.0",
+    "object-assign": "^4.1.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
